--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -299,6 +299,7 @@ body {
   font-weight: 500;
   cursor: pointer;
   flex: 1;
+  user-select: none;
 }
 
 /* Toggle Switch */
@@ -318,6 +319,7 @@ body {
   left: 0;
   cursor: pointer;
   z-index: 2;
+  margin: 0;
 }
 
 .slider {
